[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/Tiles.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player_Components/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Saving Stuff/save_world.gd" type="Script" id=3]
[ext_resource path="res://Textures/World.gd" type="Script" id=4]

[node name="World" type="Node2D"]
script = ExtResource( 4 )
game_save_class = ExtResource( 3 )

[node name="Tiles" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 21, 395 )
speed = 1000

[node name="Generate_Chunk" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Save_Chunk" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Update_Map" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="Generate_Chunk" to="." method="_on_Load_Next_Chunk_timeout"]
[connection signal="timeout" from="Save_Chunk" to="." method="_on_Save_Chunk_timeout"]
[connection signal="timeout" from="Update_Map" to="." method="_on_Update_Map_timeout"]
